# jenkins-test

./: Jenkinsfile  Jenkinsfile_extracted  app.py  complete_data_jenkins-fail-pipeline_3.json  complete_data_yessine_3.json  job.py  prepro.py  requirements_preprocessing.txt  test_preprocessing.py
agent-jenkins/: .env  .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
agent-jenkins/src/ai_agents/: __init__.py
agent-jenkins/src/ai_agents/agents/: agent_base.py  registry.py  workflow_agent.py
agent-jenkins/src/ai_agents/agents/calculator/: __init__.py  config.yaml  handlers.py
agent-jenkins/src/ai_agents/agents/jenkins_agent/: __init__.py  config.yaml  handlers.py  server.py
agent-jenkins/src/ai_agents/agents/sales_assistant/: __init__.py  config.yaml  handlers.py
agent-jenkins/src/ai_agents/deployment/api_agent/: Dockerfile  README.md  demo.py  demo_calculator.py  final_demo.py  main.py  quick_start.py  start_api.py  test_calculator_agent.py  test_config.py
agent-jenkins/src/ai_agents/deployment/docs/: FICHIERS_CREES.txt  FONCTIONS_DETAILLEES.txt  IMPLEMENTATION_GUIDE.txt  RELATIONS_ET_FLUX.txt
agent-jenkins/src/ai_agents/execution/: batch.py  cli.py  runner.py
agent-jenkins/src/ai_agents/memory/: __init__.py  base.py  factory.py  redis_memory.py  vector_store.py
agent-jenkins/src/ai_agents/model/: loader.py
agent-jenkins/src/ai_agents/tools/: __init__.py  base.py  search.py  tool_registry.py
agent-jenkins/src/ai_agents/utils/: config_loader.py  json_utils.py  logger.py
agent-jenkins/src/ai_agents/workflows/: __init__.py
agent-jenkins/src/ai_agents/workflows/core/: handlers.py  node_types.py  prompts.py  transitions.py
agent-jenkins/src/ai_agents/workflows/templates/: basic_rag_flow.yaml
agent-jenkins/src/ai_agents/workflows/utils/: graph_utils.py  (+3 more)
(+52 files in other folders)
